#60 Connect people and pictures, clean abandoned pictures add MinIO testcontainer, change logging (#80)
